# music-backup

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: backup.py  clean_library.py  main.py  quick_restore.py  restore.py
src/: analyze.py  backup.py  clean_library.py  diff.py  main.py  quick_restore.py  restore.py  save_profile.py
