[tool.poetry]
name = "spotify-backup"
version = "0.1.0"
description = ""
authors = ["Khushraj Rathod <khushraj.rathod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.20.0"
python-dotenv = "^0.21.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
